--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,24 @@ Homestead.yaml
 Homestead.json
 /.vagrant
 .phpunit.result.cache
+
+/web/node_modules
+/web/.pnp
+/web.pnp.js
+
+# testing
+/web/coverage
+
+# production
+/web/build
+
+# misc
+/web.DS_Store
+/web.env.local
+/web.env.development.local
+/web.env.test.local
+/web.env.production.local
+
+/webnpm-debug.log*
+/webyarn-debug.log*
+/webyarn-error.log*
